# Productivity-Timer-Systray

./: .gitignore  .ticktick_cookies  README.md  config.yml  pyproject.toml
docs/: conf.py
src/: close_spotify_startup.py  keep_alive.py  keep_pomo_alive.py  pomodoro.py  restart_pomo.ps1  ticktick_habits.py
src/_utils/: common.py  logger.py
src/_utils/apis/: firebase.py  homeassistant.py  spotify.py  ticktick_habits.py
src/_utils/distribution/: file_printout.py
src/_utils/system/: bluetooth.py  mouse.py  programs_windows.py  sound.py
src/_utils/system/windows/: windows.py
src/apis/: spotify.py
src/systray/: text.py  utils.py
